Going through the lab1 video

--- a/Lab1-pythonpandas_pk.ipynb
+++ b/Lab1-pythonpandas_pk.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "(1, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "4    4.23        34772  0679783261  good_reads:book  https://www.goodreads.com/author/show/1265.Jan...  1813.0  /genres/classics|/genres/fiction|/genres/roman...                dir01/1885.Pride_and_Prejudice.html      1388992                                Pride and Prejudice"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "(6000, 10)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "(6000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "Index([u'rating', u'review_count', u'isbn', u'booktype', u'author_url', u'year', u'genre_urls', u'dir', u'rating_count', u'name'], dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "pandas.core.indexes.base.Index"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       4.40\n",
+       "1       4.41\n",
+       "2       3.56\n",
+       "3       4.23\n",
+       "4       4.23\n",
+       "5       4.25\n",
+       "6       4.22\n",
+       "7       4.38\n",
+       "8       3.79\n",
+       "9       4.18\n",
+       "10      4.03\n",
+       "11      3.72\n",
+       "12      4.36\n",
+       "13      4.05\n",
+       "14      3.72\n",
+       "15      4.09\n",
+       "16      3.92\n",
+       "17      4.58\n",
+       "18      3.60\n",
+       "19      4.28\n",
+       "20      4.02\n",
+       "21      4.14\n",
+       "22      4.11\n",
+       "23      4.20\n",
+       "24      3.75\n",
+       "25      3.94\n",
+       "26      4.43\n",
+       "27      3.79\n",
+       "28      4.04\n",
+       "29      3.94\n",
+       "        ... \n",
+       "5970    3.97\n",
+       "5971    4.24\n",
+       "5972    4.19\n",
+       "5973    4.17\n",
+       "5974    3.99\n",
+       "5975    4.07\n",
+       "5976    4.23\n",
+       "5977    4.03\n",
+       "5978    3.99\n",
+       "5979    2.77\n",
+       "5980    3.84\n",
+       "5981    3.36\n",
+       "5982    4.09\n",
+       "5983    4.23\n",
+       "5984    4.02\n",
+       "5985    3.61\n",
+       "5986    4.06\n",
+       "5987    4.26\n",
+       "5988    4.34\n",
+       "5989    3.36\n",
+       "5990    4.12\n",
+       "5991    4.20\n",
+       "5992    3.89\n",
+       "5993    4.09\n",
+       "5994    4.37\n",
+       "5995    4.17\n",
+       "5996    3.99\n",
+       "5997    3.78\n",
+       "5998    3.91\n",
+       "5999    4.35\n",
+       "Name: rating, Length: 6000, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +539,7 @@
        "(pandas.core.series.Series, pandas.core.frame.DataFrame)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +559,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -568,13 +649,287 @@
        "Name: rating, Length: 6000, dtype: bool"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.rating < 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>isbn</th>\n",
+       "      <th>booktype</th>\n",
+       "      <th>author_url</th>\n",
+       "      <th>year</th>\n",
+       "      <th>genre_urls</th>\n",
+       "      <th>dir</th>\n",
+       "      <th>rating_count</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2609</th>\n",
+       "      <td>2.90</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/7707820....</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>/genres/romance|/genres/realistic-fiction|/gen...</td>\n",
+       "      <td>dir27/19546932-how-to-be-a-perfect-girl.html</td>\n",
+       "      <td>31</td>\n",
+       "      <td>How To Be A Perfect Girl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3738</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>368</td>\n",
+       "      <td>0983650322</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/9414.Vic...</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>/genres/young-adult|/genres/science-fiction|/g...</td>\n",
+       "      <td>dir38/12393909-revealing-eden.html</td>\n",
+       "      <td>688</td>\n",
+       "      <td>Revealing Eden (Save the Pearls, #1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5844</th>\n",
+       "      <td>2.97</td>\n",
+       "      <td>1399</td>\n",
+       "      <td>0395083621</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/30691.Ad...</td>\n",
+       "      <td>1925.0</td>\n",
+       "      <td>/genres/history|/genres/non-fiction|/genres/bi...</td>\n",
+       "      <td>dir59/54270.Mein_Kampf.html</td>\n",
+       "      <td>12417</td>\n",
+       "      <td>Mein Kampf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5979</th>\n",
+       "      <td>2.77</td>\n",
+       "      <td>800</td>\n",
+       "      <td>0060988649</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/7025.Gre...</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>/genres/fantasy|/genres/fiction|/genres/myster...</td>\n",
+       "      <td>dir60/24929.Lost.html</td>\n",
+       "      <td>11128</td>\n",
+       "      <td>Lost</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rating review_count        isbn         booktype                                         author_url    year                                         genre_urls                                           dir rating_count                                  name\n",
+       "2609    2.90            8         NaN  good_reads:book  https://www.goodreads.com/author/show/7707820....  2013.0  /genres/romance|/genres/realistic-fiction|/gen...  dir27/19546932-how-to-be-a-perfect-girl.html           31              How To Be A Perfect Girl\n",
+       "3738    2.00          368  0983650322  good_reads:book  https://www.goodreads.com/author/show/9414.Vic...  2011.0  /genres/young-adult|/genres/science-fiction|/g...            dir38/12393909-revealing-eden.html          688  Revealing Eden (Save the Pearls, #1)\n",
+       "5844    2.97         1399  0395083621  good_reads:book  https://www.goodreads.com/author/show/30691.Ad...  1925.0  /genres/history|/genres/non-fiction|/genres/bi...                   dir59/54270.Mein_Kampf.html        12417                            Mein Kampf\n",
+       "5979    2.77          800  0060988649  good_reads:book  https://www.goodreads.com/author/show/7025.Gre...  2001.0  /genres/fantasy|/genres/fiction|/genres/myster...                         dir60/24929.Lost.html        11128                                  Lost"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Boolean indexing example\n",
+    "df[df.rating < 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2609       8\n",
+       "3738     368\n",
+       "5844    1399\n",
+       "5979     800\n",
+       "Name: review_count, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.review_count[df.rating < 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>isbn</th>\n",
+       "      <th>booktype</th>\n",
+       "      <th>author_url</th>\n",
+       "      <th>year</th>\n",
+       "      <th>genre_urls</th>\n",
+       "      <th>dir</th>\n",
+       "      <th>rating_count</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2609</th>\n",
+       "      <td>2.90</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/7707820....</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>/genres/romance|/genres/realistic-fiction|/gen...</td>\n",
+       "      <td>dir27/19546932-how-to-be-a-perfect-girl.html</td>\n",
+       "      <td>31</td>\n",
+       "      <td>How To Be A Perfect Girl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3738</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>368</td>\n",
+       "      <td>0983650322</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/9414.Vic...</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>/genres/young-adult|/genres/science-fiction|/g...</td>\n",
+       "      <td>dir38/12393909-revealing-eden.html</td>\n",
+       "      <td>688</td>\n",
+       "      <td>Revealing Eden (Save the Pearls, #1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5844</th>\n",
+       "      <td>2.97</td>\n",
+       "      <td>1399</td>\n",
+       "      <td>0395083621</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/30691.Ad...</td>\n",
+       "      <td>1925.0</td>\n",
+       "      <td>/genres/history|/genres/non-fiction|/genres/bi...</td>\n",
+       "      <td>dir59/54270.Mein_Kampf.html</td>\n",
+       "      <td>12417</td>\n",
+       "      <td>Mein Kampf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5979</th>\n",
+       "      <td>2.77</td>\n",
+       "      <td>800</td>\n",
+       "      <td>0060988649</td>\n",
+       "      <td>good_reads:book</td>\n",
+       "      <td>https://www.goodreads.com/author/show/7025.Gre...</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>/genres/fantasy|/genres/fiction|/genres/myster...</td>\n",
+       "      <td>dir60/24929.Lost.html</td>\n",
+       "      <td>11128</td>\n",
+       "      <td>Lost</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rating review_count        isbn         booktype                                         author_url    year                                         genre_urls                                           dir rating_count                                  name\n",
+       "2609    2.90            8         NaN  good_reads:book  https://www.goodreads.com/author/show/7707820....  2013.0  /genres/romance|/genres/realistic-fiction|/gen...  dir27/19546932-how-to-be-a-perfect-girl.html           31              How To Be A Perfect Girl\n",
+       "3738    2.00          368  0983650322  good_reads:book  https://www.goodreads.com/author/show/9414.Vic...  2011.0  /genres/young-adult|/genres/science-fiction|/g...            dir38/12393909-revealing-eden.html          688  Revealing Eden (Save the Pearls, #1)\n",
+       "5844    2.97         1399  0395083621  good_reads:book  https://www.goodreads.com/author/show/30691.Ad...  1925.0  /genres/history|/genres/non-fiction|/genres/bi...                   dir59/54270.Mein_Kampf.html        12417                            Mein Kampf\n",
+       "5979    2.77          800  0060988649  good_reads:book  https://www.goodreads.com/author/show/7025.Gre...  2001.0  /genres/fantasy|/genres/fiction|/genres/myster...                         dir60/24929.Lost.html        11128                                  Lost"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfsub1=df[df.rating < 3]\n",
+    "dfsub1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2609       8\n",
+       "3738     368\n",
+       "5844    1399\n",
+       "5979     800\n",
+       "Name: review_count, dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfsub1.review_count"
    ]
   },
   {
@@ -586,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -595,13 +950,20 @@
        "4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.sum(df.rating < 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[PK] 1:17 in lab1 video"
    ]
   },
   {
