Followed some lab video

--- a/Lab1-pythonpandas_pk.ipynb
+++ b/Lab1-pythonpandas_pk.ipynb
@@ -963,7 +963,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[PK] 1:17 in lab1 video"
+    "[PK] 1:17 in lab1 video. Continue later"
    ]
   },
   {
